Fix directory exists bug, make NP work again